@@ -1,3 +1,7 @@
+2005-06-09  Zoltan Varga  <vargaz@freemail.hu>
+
+	* ia64/ia64-codegen.h: Ongoing IA64 work.
+
 2005-05-30  Zoltan Varga  <vargaz@freemail.hu>
 
 	* ia64/codegen.c: Fix it after latest changes.
